# lc3-emulator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.template.md  cliff.toml  cobertura.xml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  generate-readme.yml  release.yml  rust-audit-dependencies.yml  rust-build-manual.yml  rust-build-on-pushes.yml  rust-build-workflow_call.yml  rust-build.yml  rust-cross.yml  rust-docs.yml  rust.yml
examples/: 2048.rs  getc_out.asm  hello_world_puts.asm  hello_world_puts.sym  hello_world_putsp.asm  memory_mapped_io_keyboard.asm  memory_mapped_io_keyboard.rs  memory_mapped_io_keyboard.sym  rogue.rs  times_ten.asm  times_ten.rs  times_ten.sym
src/: errors.rs  lib.rs  main.rs  numbers.rs  terminal.rs
src/emulator/: instruction.rs  mod.rs  opcodes.rs  stdout_helpers.rs  test_helpers.rs  trap_routines.rs
src/hardware/: keyboard.rs  memory.rs  mod.rs  registers.rs
