[package]
name = "lc3-emulator"
description = "Emulator for the Little Computer 3 (LC-3)"
homepage = "https://github.com/sfleiter/lc3-emulator"
documentation = "https://sfleiter.github.io/lc3-emulator/"
readme = "README.md"
repository = "https://github.com/sfleiter/lc3-emulator"
keywords = ["emulator", "lc3", "lc-3"]
categories = ["emulators", "command-line-utilities"]
license = "MIT"
authors = ["Stefan Fleiter"]
version = "0.1.0"
edition = "2024"
# https://releases.rs/#rust-versions
# at least half a year, 1.88.0 from 26 June 2025
rust-version = "1.88.0"
publish = false

[lints.clippy]
pedantic = "warn"
nursery = "warn"
# cargo = "warn"

[dependencies]
enumn = "0.1.14"
displaydoc = "0.2.5"
crossterm = "0.29.0"

[dev-dependencies]
googletest = "0.14"
yare = "3.0.0"
